--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
             <li>
               <a href="https://github.com/MuriloOliveira13" target="_blank">
-                <img src="/logo-github.png" alt="" />
+                <img src="/assets/logo-github.png" alt="" />
               </a>
             </li>
 
@@ -156,7 +156,7 @@
                 href="https://www.linkedin.com/in/murilo-oliveira-28ab52248/"
                 target="_blank"
               >
-                <img src="/logo-linkedin.png" alt="" />
+                <img src="/assets/logo-linkedin.png" alt="" />
               </a>
             </li>
           </ul>
