--- a/index.html
+++ b/index.html
@@ -147,7 +147,10 @@
 
             <li>
               <a href="https://github.com/MuriloOliveira13" target="_blank">
-                <img src="/assets/logo-github.png" alt="" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
+                  alt=""
+                />
               </a>
             </li>
 
@@ -156,7 +159,10 @@
                 href="https://www.linkedin.com/in/murilo-oliveira-28ab52248/"
                 target="_blank"
               >
-                <img src="/assets/logo-linkedin.png" alt="" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
+                  alt=""
+                />
               </a>
             </li>
           </ul>
